Некотоыре фиксы. Добавлена логика обработки задач в продуктах
